--- a/index.html
+++ b/index.html
@@ -40,29 +40,96 @@ body::-webkit-scrollbar{width:0;height:0}
 .name{font-weight:900;font-size:14px}
 .desc{font-size:12px;color:#9ca3af;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 .price{margin-top:6px;font-weight:900;color:var(--gold)}
+
+
+
+
+  
 .modal{
-  position:fixed; inset:0; background:rgba(0,0,0,.9);
-  display:none; align-items:flex-end; z-index:100;
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.65);
+  backdrop-filter: blur(8px);
+  display:none; align-items:flex-end; justify-content:center;
+  z-index:100;
 }
 .modal.open{display:flex}
+
 .modal-box{
-  width:100%; max-width:720px; height:92vh;
-  background:#000; border-radius:26px 26px 0 0; overflow:hidden;
-  animation:up .25s ease;
+  width:100%; max-width:760px;
+  height:92vh;
+  background:linear-gradient(180deg,#0a0a0a,#000);
+  border-radius:28px 28px 0 0;
+  overflow:hidden;
+  box-shadow:0 -30px 80px rgba(0,0,0,.8);
+  animation:up .35s cubic-bezier(.16,1,.3,1);
 }
-@keyframes up{from{transform:translateY(30px);opacity:.7}to{transform:none;opacity:1}}
+
 .modal-img{
-  width:100%; height:55vh; object-fit:contain; background:#000;
+  width:100%;
+  height:58vh;
+  object-fit:contain;
+  background:radial-gradient(circle at top, #111 0%, #000 70%);
 }
+
 .modal-overlay{
   position:absolute; inset:0;
-  background:linear-gradient(180deg,transparent 40%, rgba(0,0,0,.9) 85%);
+  background:linear-gradient(180deg,rgba(0,0,0,0) 45%, rgba(0,0,0,.95) 90%);
 }
-.modal-body{position:relative; padding:18px; margin-top:-60px}
-.modal-title{font-size:24px;font-weight:900}
-.modal-desc{margin-top:8px;color:#cbd5f5;line-height:1.45}
-.modal-price{margin-top:12px;font-size:24px;font-weight:900;color:var(--gold)}
-.close{position:absolute;right:16px;top:10px;font-weight:900;font-size:22px;cursor:pointer}
+
+.modal-body{
+  position:relative;
+  padding:22px 22px 28px;
+  margin-top:-90px;
+  backdrop-filter: blur(6px);
+}
+
+.modal-title{
+  font-size:26px;
+  font-weight:900;
+  letter-spacing:.3px;
+}
+
+.modal-desc{
+  margin-top:10px;
+  color:#cbd5f5;
+  line-height:1.55;
+  font-size:14px;
+  opacity:.95;
+}
+
+.modal-price{
+  margin-top:16px;
+  font-size:28px;
+  font-weight:900;
+  color:var(--gold);
+  text-shadow:0 6px 20px rgba(212,175,55,.25);
+  box-shadow: inset 0 -120px 120px rgba(0,0,0,.85);
+}
+
+.close{
+  position:absolute;
+  right:14px;
+  top:14px;
+  width:36px; height:36px;
+  display:grid; place-items:center;
+  border-radius:999px;
+  background:rgba(255,255,255,.08);
+  backdrop-filter: blur(6px);
+  font-size:18px;
+  transition:.2s ease;
+}
+.close:hover{
+  background:rgba(255,255,255,.18);
+  transform:scale(1.05);
+}
+@keyframes up{
+  from{ transform:translateY(60px) scale(.98); opacity:0 }
+  to{ transform:none; opacity:1 }
+}
+
+
+
+  
 @media(min-width:700px){.grid{grid-template-columns:repeat(3,1fr)}}
 @media(min-width:1024px){.grid{grid-template-columns:repeat(4,1fr)}}
 html, body {
