--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ body::-webkit-scrollbar{width:0;height:0}
   height:58vh;
   object-fit:contain;
   background:radial-gradient(circle at top, #111 0%, #000 70%);
+ box-shadow: inset 0 -120px 120px rgba(0,0,0,.85);
+
 }
 
 .modal-overlay{
@@ -103,7 +105,6 @@ body::-webkit-scrollbar{width:0;height:0}
   font-weight:900;
   color:var(--gold);
   text-shadow:0 6px 20px rgba(212,175,55,.25);
-  box-shadow: inset 0 -120px 120px rgba(0,0,0,.85);
 }
 
 .close{
@@ -150,6 +151,14 @@ html, body {
   background:transparent;
   border-color:transparent;
   color:var(--muted);
+}
+.modal-body::before{
+  content:"";
+  position:absolute;
+  top:-14px; left:22px; right:22px;
+  height:1px;
+  background:linear-gradient(90deg, transparent, rgba(212,175,55,.6), transparent);
+  opacity:.6;
 }
 
 </style>
