--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@ window.addEventListener("scroll",()=>{ if((innerHeight+scrollY)>=document.body.o
 search.oninput=()=>{ termo=search.value.trim(); page=0; fimLista=false; idsCarregados.clear(); grid.innerHTML=""; loadMore(); };
 renderCats(); loadMore();
 </script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/sw.js");
+}
+</script>
 
 </body>
 </html>
