--- a/index.html
+++ b/index.html
@@ -291,9 +291,12 @@ renderCats(); loadMore();
 </script>
 <script>
 if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/sw.js");
+  window.addEventListener("load", () => {
+    navigator.serviceWorker.register("/sw.js");
+  });
 }
 </script>
+
 
 </body>
 </html>
