--- a/dashboard.html
+++ b/dashboard.html
@@ -242,7 +242,7 @@ iframe{
 <aside class="sidebar">
 
   <!-- 1️⃣ DASHBOARD -->
-  <div class="icon active" onclick="openPage('dashboard.html',this)" title="Dashboard">
+  <div class="icon active" onclick="openPage('home.html',this)" title="Home">
     <span class="glyph home"></span>
   </div>
 
