--- a/dashboard.html
+++ b/dashboard.html
@@ -320,7 +320,7 @@ function openPage(page, el){
   el.classList.add("active");
 
   const titles = {
-    "dashboard.html": "CB SYSTEMS® - Dashboard",
+    "home.html": "CB SYSTEMS® - Dashboard",
     "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
     "ingredientes.html": "CB SYSTEMS® - Ingredientes",
     "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
