--- a/ingredientes.html
+++ b/ingredientes.html
@@ -12,19 +12,36 @@
 :root{
   --primary:#14b8a6;
   --primary-dark:#0f766e;
-  --bg:#f1f5f9;
-  --card:#ffffff;
-  --muted:#64748b;
+  --primary-soft:#e6fffa;
+  --bg:#0b1220;
+  --panel:#0f172a;
+  --card:#0b1220;
+  --text:#e5e7eb;
+  --muted:#94a3b8;
+  --border:rgba(148,163,184,.18);
+  --ring:rgba(20,184,166,.35);
+  --radius-xl:26px;
+  --radius-lg:18px;
+  --radius-md:14px;
+  --shadow-soft:0 10px 30px rgba(0,0,0,.35);
+  --shadow-strong:0 30px 80px rgba(0,0,0,.55);
 }
 
+/* RESET */
 *{box-sizing:border-box}
-
-body{
+html,body{
   margin:0;
-  background:var(--bg);
-  font-family:Inter,sans-serif;
+  width:100%;
+  height:100%;
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  background:
+    radial-gradient(1200px 600px at 10% -10%, rgba(20,184,166,.08), transparent 60%),
+    radial-gradient(900px 500px at 110% 10%, rgba(20,184,166,.06), transparent 55%),
+    var(--bg);
+  color:var(--text);
 }
 
+/* APP LAYOUT */
 .app{
   display:grid;
   grid-template-columns:320px 1fr;
@@ -33,88 +50,182 @@ body{
 
 /* SIDEBAR */
 .sidebar{
-  background:#fff;
-  padding:20px;
-  border-right:1px solid #e5e7eb;
+  background:
+    linear-gradient(180deg, rgba(15,23,42,.85), rgba(11,18,32,.95));
+  border-right:1px solid var(--border);
+  padding:22px 18px 18px;
   display:flex;
   flex-direction:column;
+  gap:14px;
+  backdrop-filter: blur(8px);
 }
 
-.sidebar h2{margin-bottom:12px}
+.sidebar h2{
+  margin:6px 8px 10px;
+  font-size:18px;
+  font-weight:900;
+  letter-spacing:.06em;
+  color:#e6fffa;
+}
+
 .sidebar input{
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #cbd5e1;
+  background:#0b1220;
+  color:var(--text);
+  padding:14px 14px;
+  border-radius:999px;
+  border:1px solid var(--border);
+  outline:none;
   text-transform:uppercase;
 }
+.sidebar input::placeholder{color:var(--muted)}
+.sidebar input:focus{
+  border-color:var(--primary);
+  box-shadow:0 0 0 4px var(--ring);
+}
 
+/* LISTA */
 .lista{
-  margin-top:12px;
+  margin-top:6px;
   overflow:auto;
-  flex:1;
+  padding-right:6px;
+}
+.lista::-webkit-scrollbar{width:8px}
+.lista::-webkit-scrollbar-thumb{
+  background:rgba(148,163,184,.25);
+  border-radius:999px;
 }
 
 .item{
-  padding:12px;
-  border-radius:12px;
+  padding:12px 14px;
+  border-radius:14px;
   margin-bottom:6px;
   cursor:pointer;
   font-weight:800;
+  letter-spacing:.03em;
+  color:#c7d2fe;
+  background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
+  border:1px solid var(--border);
+  transition:.15s ease;
+}
+.item:hover{
+  transform:translateY(-1px);
+  border-color:rgba(20,184,166,.6);
+  box-shadow:0 8px 24px rgba(20,184,166,.15);
+}
+.item.active{
+  background:linear-gradient(135deg, rgba(20,184,166,.18), rgba(20,184,166,.05));
+  border-color:rgba(20,184,166,.75);
+  box-shadow:0 10px 26px rgba(20,184,166,.25);
+  color:#e6fffa;
 }
 
-.item:hover{background:#f1f5f9}
-.item.active{background:#e0f2fe}
-
+/* BOTÃO NOVO */
 .new{
-  margin-top:12px;
-  background:#e5e7eb;
+  margin-top:auto;
+  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
   border:none;
-  border-radius:14px;
-  padding:12px;
-  font-weight:800;
+  border-radius:999px;
+  padding:14px 16px;
+  font-weight:900;
+  letter-spacing:.08em;
+  color:#042f2e;
   cursor:pointer;
+  box-shadow:0 14px 40px rgba(20,184,166,.45);
+  transition:.15s ease;
+}
+.new:hover{
+  transform:translateY(-1px);
+  box-shadow:0 18px 60px rgba(20,184,166,.55);
 }
 
 /* MAIN */
-.main{padding:28px}
+.main{
+  padding:28px 28px 36px;
+  overflow:auto;
+}
+.main::-webkit-scrollbar{width:10px}
+.main::-webkit-scrollbar-thumb{
+  background:rgba(148,163,184,.25);
+  border-radius:999px;
+}
 
+/* CARD */
 .card{
-  background:var(--card);
-  border-radius:24px;
-  padding:28px;
-  box-shadow:0 20px 40px rgba(0,0,0,.08);
-  max-width:900px;
+  max-width:980px;
+  margin:0 auto;
+  background:
+    linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)),
+    var(--panel);
+  border-radius:var(--radius-xl);
+  padding:28px 28px 30px;
+  box-shadow:var(--shadow-strong);
+  border:1px solid var(--border);
 }
 
+.card h1{
+  margin:0 0 12px;
+  font-size:28px;
+  font-weight:900;
+  letter-spacing:.06em;
+}
+.card h3{
+  margin:10px 0 4px;
+  font-weight:900;
+  color:#e6fffa;
+}
+
+/* SEÇÕES */
 .section{
-  margin-top:28px;
-  padding-top:20px;
-  border-top:1px solid #e5e7eb;
+  margin-top:22px;
+  padding-top:18px;
+  border-top:1px dashed var(--border);
 }
 
+/* FORM */
 label{
   display:block;
-  font-size:13px;
-  font-weight:800;
+  font-size:12px;
+  font-weight:900;
+  letter-spacing:.08em;
   margin-top:14px;
+  color:#cbd5e1;
 }
 
-input,select,button{
+input, select, button{
   width:100%;
   padding:14px 16px;
-  border-radius:16px;
-  border:1px solid #cbd5e1;
+  border-radius:14px;
+  border:1px solid var(--border);
   margin-top:6px;
+  background:#020617;
+  color:var(--text);
   text-transform:uppercase;
+  outline:none;
+  transition:.15s ease;
 }
 
+select{appearance:none}
+
+input::placeholder{color:var(--muted)}
+input:focus, select:focus{
+  border-color:var(--primary);
+  box-shadow:0 0 0 4px var(--ring);
+}
+
+/* BOTÃO SALVAR */
 button{
-  background:linear-gradient(180deg,var(--primary),var(--primary-dark));
-  color:#fff;
-  font-weight:800;
+  margin-top:26px;
   border:none;
+  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
+  color:#042f2e;
+  font-weight:900;
+  letter-spacing:.1em;
+  box-shadow:0 14px 44px rgba(20,184,166,.45);
   cursor:pointer;
-  margin-top:30px;
+}
+button:hover{
+  transform:translateY(-1px);
+  box-shadow:0 18px 64px rgba(20,184,166,.6);
 }
 
 /* TOAST */
@@ -122,17 +233,35 @@ button{
   position:fixed;
   bottom:20px;
   right:20px;
-  background:#22c55e;
-  color:#fff;
-  padding:14px 20px;
+  background:linear-gradient(135deg,#22c55e,#16a34a);
+  color:#042f2e;
+  padding:14px 18px;
   border-radius:14px;
-  font-weight:800;
+  font-weight:900;
+  letter-spacing:.06em;
   opacity:0;
   transform:translateY(10px);
-  transition:.3s;
+  box-shadow:0 16px 44px rgba(34,197,94,.45);
+  transition:.25s ease;
+}
+.toast.show{
+  opacity:1;
+  transform:translateY(0);
 }
 
-.toast.show{opacity:1;transform:translateY(0)}
+/* RESPONSIVO */
+@media(max-width:980px){
+  .app{grid-template-columns:1fr}
+  .sidebar{
+    position:sticky;
+    top:0;
+    z-index:5;
+    border-right:none;
+    border-bottom:1px solid var(--border);
+    border-radius:0 0 22px 22px;
+  }
+  .card{border-radius:22px}
+}
 </style>
 </head>
 
