--- a/ingredientes.html
+++ b/ingredientes.html
@@ -274,6 +274,41 @@ button:hover{
   border:1px solid var(--border);
   box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
 }
+
+/* GRID PARA OS CAMPOS (2 a 3 por linha) */
+.section{
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr)); /* até 3 por linha */
+  gap: 16px 14px;
+  margin-top:22px;
+  padding-top:18px;
+  border-top:1px dashed var(--border);
+}
+
+/* TÍTULO DA SEÇÃO OCUPA A LINHA TODA */
+.section h3{
+  grid-column: 1 / -1;
+}
+
+/* CAMPOS GRANDES OCUPAM A LINHA TODA */
+.section label:has(+ #nome),
+.section label:has(+ #descricao){
+  grid-column: 1 / -1;
+}
+
+/* RESPONSIVO: 2 POR LINHA NO MOBILE */
+@media(max-width: 900px){
+  .section{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+/* RESPONSIVO PEQUENO: 1 POR LINHA */
+@media(max-width: 520px){
+  .section{
+    grid-template-columns: 1fr;
+  }
+}
 </style>
 </head>
 
