--- a/ingredientes.html
+++ b/ingredientes.html
@@ -179,8 +179,11 @@ html,body{
   margin-top:22px;
   padding-top:18px;
   border-top:1px dashed var(--border);
-}
 
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr)); /* 3 por linha */
+  gap: 16px 14px;
+}
 /* FORM */
 label{
   display:block;
@@ -275,35 +278,35 @@ button:hover{
   box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
 }
 
-/* GRID PARA OS CAMPOS (2 a 3 por linha) */
-.section{
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr)); /* até 3 por linha */
-  gap: 16px 14px;
-  margin-top:22px;
-  padding-top:18px;
-  border-top:1px dashed var(--border);
+
+
+/* RESPONSIVO PEQUENO: 1 POR LINHA */
+@media(max-width: 520px){
+  .section{
+    grid-template-columns: 1fr;
+  }
 }
 
-/* TÍTULO DA SEÇÃO OCUPA A LINHA TODA */
+
+
+  /* TÍTULO DA SEÇÃO OCUPA A LINHA TODA */
 .section h3{
   grid-column: 1 / -1;
 }
 
-/* CAMPOS GRANDES OCUPAM A LINHA TODA */
-.section label:has(+ #nome),
-.section label:has(+ #descricao){
+/* CAMPOS GRANDES (NOME E DESCRIÇÃO) OCUPAM A LINHA TODA */
+#nome, #descricao{
   grid-column: 1 / -1;
 }
 
-/* RESPONSIVO: 2 POR LINHA NO MOBILE */
+/* RESPONSIVO: 2 POR LINHA */
 @media(max-width: 900px){
   .section{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
-/* RESPONSIVO PEQUENO: 1 POR LINHA */
+/* RESPONSIVO: 1 POR LINHA */
 @media(max-width: 520px){
   .section{
     grid-template-columns: 1fr;
@@ -422,8 +425,9 @@ function moeda(el){
     el.value="R$ "+(v/100).toFixed(2).replace(".",",");
   }
 }
-moeda(valor);
-
+window.addEventListener("DOMContentLoaded", ()=>{
+  moeda(valor);
+});
 let pagina = 0;
 const LIMITE = 20;
 let carregando = false;
