--- a/ingredientes.html
+++ b/ingredientes.html
@@ -41,7 +41,7 @@ html,body{
   color:var(--text);
 }
 
-/* APP LAYOUT */
+/* APP */
 .app{
   display:grid;
   grid-template-columns:320px 1fr;
@@ -51,13 +51,13 @@ html,body{
 /* SIDEBAR */
 .sidebar{
   background:
-    linear-gradient(180deg, rgba(15,23,42,.85), rgba(11,18,32,.95));
+    linear-gradient(180deg, rgba(15,23,42,.9), rgba(11,18,32,.95));
   border-right:1px solid var(--border);
   padding:22px 18px 18px;
   display:flex;
   flex-direction:column;
   gap:14px;
-  backdrop-filter: blur(8px);
+  height:100vh;
 }
 
 .sidebar h2{
@@ -71,7 +71,7 @@ html,body{
 .sidebar input{
   background:#0b1220;
   color:var(--text);
-  padding:14px 14px;
+  padding:14px;
   border-radius:999px;
   border:1px solid var(--border);
   outline:none;
@@ -86,8 +86,14 @@ html,body{
 /* LISTA */
 .lista{
   margin-top:6px;
-  overflow:auto;
-  padding-right:6px;
+  padding:10px;
+  flex:1;
+  overflow-y:auto;
+  border-radius:18px;
+  background:
+    linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.01));
+  border:1px solid var(--border);
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
 }
 .lista::-webkit-scrollbar{width:8px}
 .lista::-webkit-scrollbar-thumb{
@@ -125,17 +131,17 @@ html,body{
   background:linear-gradient(135deg,var(--primary),var(--primary-dark));
   border:none;
   border-radius:999px;
-  padding:14px 16px;
+  padding:14px 18px;
   font-weight:900;
-  letter-spacing:.08em;
+  letter-spacing:.1em;
   color:#042f2e;
   cursor:pointer;
-  box-shadow:0 14px 40px rgba(20,184,166,.45);
-  transition:.15s ease;
+  box-shadow:0 16px 44px rgba(20,184,166,.45);
+  transition:.2s ease;
 }
 .new:hover{
-  transform:translateY(-1px);
-  box-shadow:0 18px 60px rgba(20,184,166,.55);
+  transform:translateY(-1px) scale(1.01);
+  box-shadow:0 20px 64px rgba(20,184,166,.65);
 }
 
 /* MAIN */
@@ -151,14 +157,15 @@ html,body{
 
 /* CARD */
 .card{
-  max-width:980px;
+  max-width:1100px;
   margin:0 auto;
   background:
-    linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)),
+    radial-gradient(120% 120% at 10% 0%, rgba(255,255,255,.05), transparent 40%),
+    linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02)),
     var(--panel);
-  border-radius:var(--radius-xl);
-  padding:28px 28px 30px;
-  box-shadow:var(--shadow-strong);
+  border-radius:28px;
+  padding:32px;
+  box-shadow:0 30px 80px rgba(0,0,0,.65);
   border:1px solid var(--border);
 }
 
@@ -174,79 +181,98 @@ html,body{
   color:#e6fffa;
 }
 
+/* SEÇÕES */
+.section{
+  margin-top:26px;
+  padding-top:18px;
+  border-top:1px dashed var(--border);
+}
 
-
-
-/* GRID PADRÃO DOS FORMULÁRIOS */
+/* FORM GRID */
 .form-grid{
   display:grid;
   grid-template-columns: repeat(3, minmax(0,1fr));
   gap:16px 14px;
+  margin-top:14px;
 }
 
-/* Cada campo */
 .field{
   display:flex;
   flex-direction:column;
 }
 
-/* Campos grandes */
 .field.full{
-  grid-column: 1 / -1;
+  grid-column:1 / -1;
 }
 
-/* Título da nutrição */
 .form-grid h3{
-  grid-column: 1 / -1;
+  grid-column:1 / -1;
 }
 
-/* Responsivo */
-@media(max-width: 900px){
-  .form-grid{
-    grid-template-columns: repeat(2, minmax(0,1fr));
+/* INPUTS */
+input, select{
+  width:100%;
+  padding:14px 16px;
+  border-radius:14px;
+  border:1px solid var(--border);
+  margin-top:6px;
+  background:
+    linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)),
+    #020617;
+  color:var(--text);
+  text-transform:uppercase;
+  outline:none;
+  transition:.15s ease;
+}
+input::placeholder{color:var(--muted)}
+input:focus, select:focus{
+  border-color:var(--primary);
+  box-shadow:0 0 0 4px var(--ring);
+}
+
+.field label{
+  font-size:12px;
+  font-weight:800;
+  letter-spacing:.08em;
+  color:#cbd5e1;
+}
+
+/* BOTÃO SALVAR */
+button{
+  margin-top:26px;
+  border:none;
+  border-radius:999px;
+  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
+  color:#042f2e;
+  font-weight:900;
+  letter-spacing:.12em;
+  padding:16px 22px;
+  box-shadow:0 16px 44px rgba(20,184,166,.45);
+  cursor:pointer;
+  transition:.2s ease;
+}
+button:hover{
+  transform:translateY(-1px) scale(1.01);
+  box-shadow:0 20px 64px rgba(20,184,166,.65);
+}
+
+/* RESPONSIVO */
+@media(max-width:980px){
+  .app{grid-template-columns:1fr}
+  .sidebar{
+    position:sticky;
+    top:0;
+    height:auto;
+    border-right:none;
+    border-bottom:1px solid var(--border);
+    border-radius:0 0 22px 22px;
   }
 }
-
-@media(max-width: 520px){
-  .form-grid{
-    grid-template-columns: 1fr;
-  }
+@media(max-width:900px){
+  .form-grid{grid-template-columns:repeat(2,1fr)}
 }
-
-/* GRID PADRÃO DOS FORMULÁRIOS */
-.form-grid{
-  display:grid;
-  grid-template-columns: repeat(3, minmax(0,1fr));
-  gap:16px 14px;
-}
-
-/* Cada campo */
-.field{
-  display:flex;
-  flex-direction:column;
-}
-
-/* Campos grandes */
-.field.full{
-  grid-column: 1 / -1;
-}
-
-/* Título da nutrição */
-.form-grid h3{
-  grid-column: 1 / -1;
-}
-
-/* Responsivo */
-@media(max-width: 900px){
-  .form-grid{
-    grid-template-columns: repeat(2, minmax(0,1fr));
-  }
-}
-
-@media(max-width: 520px){
-  .form-grid{
-    grid-template-columns: 1fr;
-  }
+@media(max-width:520px){
+  .form-grid{grid-template-columns:1fr}
 }
 </style>
 </head>
